# coursework6

./: .env_example  .gitignore  README.md  pyproject.toml
blog/: forms.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog_app/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
fixtures/: blog.json  client.json  groups.json  mailing.json  message.json  permissions.json  users.json
mailings/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
mailings/fixtures/: client.json  mailing.json  message.json
mailings/management/commands/: fill_db.py  runapscheduler.py
mailings/migrations/: 0001_initial.py  0002_client_owner_log_owner_mailing_owner_message_owner.py  0003_alter_mailing_status.py  0004_alter_mailing_options.py
mailings/templates/mailings_app/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  index.html  logs_list.html  mailings_change_status.html  mailings_confirm_delete.html  mailings_detail.html  mailings_form.html  mailings_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
mailings/templates/mailings_app/includes/: inc_base.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_code.py  0003_alter_user_options.py
users/templates/users_app/: login.html  register_message.html  update_user.html  user_form.html  users_list.html
