[tool.poetry]
name = "coursework6"
version = "0.1.0"
description = "coursework_6(django)"
authors = ["mmrxsky <wwhskynet@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.10"
pillow = "^11.0.0"
ipython = "^8.29.0"
redis = "^5.2.0"
python-dotenv = "^1.0.1"
django-apscheduler = "^0.7.0"
black = "^24.10.0"
django = "4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
